# threshold-node

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HARDWARE.md  KANBAN.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
config/: env.example
console/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
docs/: ARCHITECTURE.md  AURORA-EASTER-EGG.md  BUILD-WEEK.md  CODING_GUIDE.md  DEMO-SCRIPT.md  INTEGRATIONS.md  LEAK-TEST.md  PRIVACY.md  PUBLICATION-CHECKLIST.md  REAL-FOOTAGE-CHECKLIST.md  SPEC-NODE.md  SPEC-THS-0.1.md
docs/delivery/: APP_DELIVERY_RECEIPT.json  DOCS_IMPACT_MATRIX.md  FEATURE_INDEX.md  QA_MATRIX.md
media/: README.md
reference/: Threshold-MVP.jsx
schema/: ths-0.1.schema.json  ths-geometry-proposal-0.1.schema.json  ths-vision-proposal-0.1.schema.json
schema/examples/: synthetic-demo-house.json
scripts/: mock_robot.py  public_release_check.py
src/threshold/: __main__.py
tests/integration/: test_geometry_materialization.py  test_simulated_appliance.py
tests/unit/: test_api_server.py  test_config.py  test_display.py  test_estop.py  test_geometry.py  test_grant_authority.py  test_grant_manager.py  test_grant_store.py  test_ledger.py  test_materialize.py  test_mock_robot.py  test_public_release_check.py  test_quiet_hours.py  test_receipt.py  test_scoped_view.py  test_synthetic_fixture.py  test_vision_intake.py  (+1 more)
(+31 files in other folders)
