[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threshold-node"
version = "0.1.0"
description = "Owner-held, machine-readable housefile + permission node for domestic robots"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["edge-ai", "robotics", "privacy", "home-automation"]
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pyserial>=3.5", "websockets>=12", "httpx>=0.27"]
[project.optional-dependencies]
dev = ["jsonschema>=4.10", "pytest>=8"]

[project.scripts]
threshold-node = "threshold.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
